# MiniZIP

./: CMakeLists.txt  README.md  test.cpp  test.mzip
backend/archive/: archive_reader.cpp  archive_reader.h  archive_writer.cpp  archive_writer.h
backend/cli/: .gitignore  main.cpp
backend/common/: errors.h
backend/compression/: huffman.cpp  huffman.h
backend/filesystem/: file_scanner.cpp  file_scanner.h
